--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "reactSnap": {
     "source": "dist",
     "skipThirdPartyRequests": true,
-    "allowedThirdPartyDomains": ["https://cdnjs.cloudflare.com"],
+    "allowedThirdPartyDomains": [
+      "https://cdnjs.cloudflare.com"
+    ],
     "minifyHtml": {
       "collapseWhitespace": false,
       "removeComments": false
@@ -23,36 +25,36 @@
   },
   "author": "milkmidi",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-dynamic-import-node": "^1.0.2",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-dynamic-import-node": "^2.0.0",
     "babel-plugin-module-resolver": "^3.1.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.14",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-env": "^1.2.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.24.1",
-    "chalk": "^2.4.0",
-    "classnames": "^2.2.5",
+    "chalk": "^2.4.1",
+    "classnames": "^2.2.6",
     "clean-webpack-plugin": "^0.1.16",
-    "copy-webpack-plugin": "^4.5.1",
-    "cross-env": "^5.0.1",
-    "css-loader": "^0.28.7",
-    "es6-promise": "^4.1.0",
+    "copy-webpack-plugin": "^4.5.2",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
+    "es6-promise": "^4.2.4",
     "eslint": "^4.19.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-import-resolver-webpack": "^0.9.0",
-    "eslint-plugin-compat": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.46.3",
-    "eslint-plugin-html": "^4.0.3",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-compat": "^2.5.1",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-html": "^4.0.5",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-react": "^7.10.0",
     "file-loader": "^1.1.11",
-    "flow-bin": "^0.70.0",
+    "flow-bin": "^0.78.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "gulp": "^3.9.1",
     "gulp-changed": "^3.1.0",
@@ -67,31 +69,31 @@
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-mozjpeg": "^7.0.0",
     "imagemin-optipng": "^5.2.1",
-    "imagemin-pngquant": "^5.0.0",
-    "imagemin-svgo": "^6.0.0",
+    "imagemin-pngquant": "^6.0.0",
+    "imagemin-svgo": "^7.0.0",
     "immutable": "^3.8.2",
-    "jest": "^22.4.3",
-    "lint-staged": "^7.0.4",
+    "jest": "^23.4.2",
+    "lint-staged": "^7.2.0",
     "merge-stream": "^1.0.1",
-    "mini-css-extract-plugin": "^0.4.0",
-    "pixi.js": "^4.7.3",
+    "mini-css-extract-plugin": "^0.4.1",
+    "pixi.js": "^4.8.1",
     "plop": "^2.0.0",
-    "postcss": "^6.0.6",
-    "postcss-loader": "^2.1.4",
-    "pug": "^2.0.0-beta11",
-    "pug-html-loader": "^1.0.9",
-    "pug-loader": "^2.3.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-hot-loader": "^4.1.1",
-    "react-loadable": "^5.3.1",
-    "react-redux": "^5.0.5",
-    "react-router-dom": "^4.2.2",
-    "react-router-prop-types": "^1.0.3",
+    "postcss": "^7.0.2",
+    "postcss-loader": "^2.1.6",
+    "pug": "^2.0.3",
+    "pug-html-loader": "^1.1.5",
+    "pug-loader": "^2.4.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-hot-loader": "^4.3.4",
+    "react-loadable": "^5.4.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-router-prop-types": "^1.0.4",
     "react-snap": "^1.17.0",
     "redux": "^4.0.0",
     "redux-observable": "^0.18.0",
-    "rimraf": "^2.5.4",
+    "rimraf": "^2.6.2",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "scriptjs": "^2.5.8",
     "style-loader": "^0.21.0",
@@ -100,13 +102,14 @@
     "stylus-loader": "^3.0.1",
     "url-loader": "^1.0.1",
     "vinyl-buffer": "^1.0.0",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
     "weinre-webpack-plugin": "^2.0.3"
   },
   "dependencies": {
-    "iphone-inline-video": "^2.2.2",
+    "autoprefixer": "^9.1.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
     "rxjs": "^5.5.10"
   }
 }
