--- a/package.json
+++ b/package.json
@@ -40,30 +40,29 @@
     "babel-preset-stage-0": "^6.24.1",
     "chalk": "^2.4.1",
     "classnames": "^2.2.6",
-    "clean-webpack-plugin": "^0.1.16",
-    "copy-webpack-plugin": "^4.5.2",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
+    "css-loader": "^1.0.1",
     "es6-promise": "^4.2.4",
     "eslint": "^4.19.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-import-resolver-webpack": "^0.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-compat": "^2.5.1",
     "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-html": "^4.0.5",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-react": "^7.10.0",
-    "file-loader": "^1.1.11",
-    "flow-bin": "^0.78.0",
-    "friendly-errors-webpack-plugin": "^1.6.1",
+    "eslint-plugin-html": "^4.0.6",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^2.0.0",
+    "flow-bin": "^0.85.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "gulp": "^3.9.1",
-    "gulp-changed": "^3.1.0",
+    "gulp-changed": "^3.2.0",
     "gulp-imagemin": "^4.1.0",
-    "gulp-load-plugins": "^1.4.0",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-size": "^3.0.0",
-    "gulp-util": "^3.0.7",
-    "gulp.spritesmith": "^6.2.1",
-    "html-loader": "^0.5.0",
+    "gulp-util": "^3.0.8",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "imagemin-gifsicle": "^5.1.0",
     "imagemin-jpegtran": "^5.0.2",
@@ -75,41 +74,42 @@
     "jest": "^23.4.2",
     "lint-staged": "^7.2.0",
     "merge-stream": "^1.0.1",
-    "mini-css-extract-plugin": "^0.4.1",
-    "pixi.js": "^4.8.1",
-    "plop": "^2.0.0",
-    "postcss": "^7.0.2",
-    "postcss-loader": "^2.1.6",
+    "mini-css-extract-plugin": "^0.4.4",
+    "plop": "^2.1.0",
+    "postcss": "^7.0.5",
+    "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
     "pug-html-loader": "^1.1.5",
     "pug-loader": "^2.4.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-hot-loader": "^4.3.4",
-    "react-loadable": "^5.4.0",
-    "react-redux": "^5.0.7",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-hot-loader": "^4.3.12",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-router-prop-types": "^1.0.4",
-    "react-snap": "^1.17.0",
-    "redux": "^4.0.0",
-    "redux-observable": "^0.18.0",
+    "react-snap": "^1.19.0",
+    "redux": "^4.0.1",
+    "redux-observable": "^1.0.0",
     "rimraf": "^2.6.2",
-    "script-ext-html-webpack-plugin": "^2.0.1",
-    "scriptjs": "^2.5.8",
-    "style-loader": "^0.21.0",
-    "styled-components": "^3.2.6",
+    "script-ext-html-webpack-plugin": "^2.1.1",
+    "scriptjs": "^2.5.9",
+    "style-loader": "^0.23.1",
+    "styled-components": "^4.0.3",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "url-loader": "^1.0.1",
+    "stylus-loader": "^3.0.2",
+    "url-loader": "^1.1.2",
     "vinyl-buffer": "^1.0.0",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "weinre-webpack-plugin": "^2.0.3"
+    "webpack": "^4.24.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "weinre-webpack-plugin": "^2.3.0"
   },
   "dependencies": {
-    "autoprefixer": "^9.1.0",
+    "autoprefixer": "^9.3.1",
     "postcss-flexbugs-fixes": "^4.1.0",
-    "rxjs": "^5.5.10"
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
+    "symbol-observable": "^1.2.0"
   }
 }
