--- a/.babelrc
+++ b/.babelrc
@@ -1,25 +1,27 @@
 {
   "presets": [
-    ["env", {
-      "modules": false,
-      "loose": true,
-      "targets": {
-        "node": "current",
-        "browsers": [
-          "> 5%",
-          "last 2 versions", 
-          "ie >= 10"
-        ]
+    [
+      "@babel/preset-env",
+      {
+        "modules": false,
+        "loose": true,
+        "targets": {
+          "node": "current",
+          "browsers": [
+            "> 5%",
+            "last 2 versions",
+            "ie >= 10"
+          ]
+        }
       }
-    }],
-    "stage-0",
-    "react",
-    "flow"
+    ],
+    "@babel/preset-react",
+    "@babel/preset-flow"
   ],
   "env": {
     "test": {
       "plugins": [
-        "transform-es2015-modules-commonjs",
+        "@babel/plugin-transform-modules-commonjs",
         "dynamic-import-node"
       ]
     },
@@ -30,6 +32,31 @@
     }
   },
   "plugins": [
-    "transform-decorators-legacy"
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-syntax-import-meta",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-json-strings",
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ],
+    "@babel/plugin-proposal-function-sent",
+    "@babel/plugin-proposal-export-namespace-from",
+    "@babel/plugin-proposal-numeric-separator",
+    "@babel/plugin-proposal-throw-expressions",
+    "@babel/plugin-proposal-export-default-from",
+    "@babel/plugin-proposal-logical-assignment-operators",
+    "@babel/plugin-proposal-optional-chaining",
+    [
+      "@babel/plugin-proposal-pipeline-operator",
+      {
+        "proposal": "minimal"
+      }
+    ],
+    "@babel/plugin-proposal-nullish-coalescing-operator",
+    "@babel/plugin-proposal-do-expressions",
+    "@babel/plugin-proposal-function-bind"
   ]
 }
